tests/negative/module/core_not_found.orng
// core_not_found.orng:6:51: error: member `Something_That_Doesnt_Exist` not in module `core`
//     let x: Int = core::Something_That_Doesnt_Exist
//                                                  ^
// 
fn main() -> Int {
    let x: Int = core::Something_That_Doesnt_Exist
    x
}